テンプレート関数をグローバルに

--- a/templates/layouts/default.tmpl
+++ b/templates/layouts/default.tmpl
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>{{ .Title }}</title>
-	{{ .LinkCSS "main.css" }}
+	{{ linkCSS "main.css" }}
 	{{ template "Header" . }}
 </head>
 <body>
