バージョンアップ

--- a/templates/flash.tmpl
+++ b/templates/flash.tmpl
@@ -1,13 +1,53 @@
 {{ define "Header" }}
+<style type="text/css">
+	p {
+		font-size: 2.0em;
+	}
+</style>
 {{ end }}
 {{ define "Content" }}
 
-{{ range .Messages }}
-<h2>
-{{ . }}
-</h2>
-{{ end }}
+<div id="modal" class="modal">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h4 class="modal-title">エラー</h4>
+			</div>
+			<div class="modal-body">
+				{{ range .Messages }}
+					<div class="alert alert-dismissable alert-danger">
+						{{ . }}
+					</div>
+				{{ end }}
+				<hr />
+				<p><strong>エラーが発生しました。前のページに戻ります。</strong></p>
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-primary">戻る</button>
+			</div>
+		</div>
+	</div>
+</div>
 
-<a href="{{ .Referer }}">戻る</a>
+<script type="text/javascript">
+
+$(document).ready(function () {
+
+	var modal = $("#modal");
+
+	modal.find(".modal-footer button").on("click", function () {
+		if ((location.href == "{{ .Referer }}") || ("{{ .Referer }}" == "")) {
+			location.pathname = "/";
+			return;
+		}
+
+		location.href = "{{ .Referer }}";
+	});
+
+	modal.show();
+
+});
+
+</script>
 
 {{ end }}
