--- a/templates/index.tmpl
+++ b/templates/index.tmpl
@@ -1,8 +1,15 @@
-{{ define "Header" }}{{ end }}
+{{ define "Header" }}
+
+{{ end }}
 
 {{ define "Content" }}
 
-<h1>ようこそ！</h1>
-インストールは成功です。
+<div class="jumbotron">
+  <div class="container">
+    <h1>インストール成功です!</h1>
+    <p>おめでとうございますおめでとうございますおめでとうございますおめでとうございますおめでとうございます</p>
+    <p><a class="btn btn-primary btn-lg" href="https://github.com/mjhd-devlion/gum" role="button">Gum &raquo;</a></p>
+  </div>
+</div>
 
 {{ end }}
